kubernetes/backend/namespace.yaml
# Namespace = a folder inside the cluster to keep our stuff organized.
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel
